# FluxWatch

./: .gitignore  README.md
services/analytics_engine/: Cargo.toml  README.md
services/analytics_engine/src/: main.rs
services/analytics_engine/src/alerts/: alerts.rs  mod.rs
services/analytics_engine/src/clients/: config.rs  database.rs  mod.rs  redis.rs
services/analytics_engine/src/events/: events.rs  mod.rs
services/analytics_engine/src/rules/: engine.rs  event_spike_rule.rs  mod.rs
services/api/: .dockerignore  .pre-commit-config.yaml  Dockerfile  alembic.ini  local_run.py  pyproject.toml
services/api/alembic/: env.py
services/api/alembic/versions/: 23b8f78c5750_init.py  45455cd26d21_added_alerts_table.py  482f7af80d6c_create_events_table.py  54cd5439e537_add_sessions_table.py  8ccc311eae1a_added_occured_at_column_to_events_table.py  8e53e66f947e_init.py
services/api/flux_watch_api/: common_deps.py  create_app.py  main.py
services/api/flux_watch_api/api/: routes.py
services/api/flux_watch_api/core/: app.py  base_repository.py  config.py  registry.py
services/api/flux_watch_api/database/: client.py  redis.py  session.py
services/api/flux_watch_api/errors/: rest_errors.py
services/api/flux_watch_api/middlewares/: auth.py
services/api/flux_watch_api/models/: account.py  auth.py  base.py  common.py  events.py  query.py  response_schema.py  user.py
services/api/flux_watch_api/routes/: routes.py
services/api/flux_watch_api/schema/: __init__.py  account.py  account_creds.py  alerts.py  events.py  session.py
services/api/flux_watch_api/services/: email_service.py
services/api/flux_watch_api/utils/: auth.py  (+5 more)
services/api/tests/: conftest.py
(+105 files in other folders)
